--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <style>
         img {
             margin-left: 10%;
@@ -34,6 +34,8 @@
         <li>Saga de Assassins Creed</li>
     </ul>
     
+
+    <a href="pages/tpjs.html">Ejercicios TP</a>
 
      
 </body>
