--- a/pages/tpjs.html
+++ b/pages/tpjs.html
@@ -15,6 +15,7 @@
 <h3>Ejercicio 1</h3>
 
 <p>Ingrese tres numeros para saber cual es el mayor</p>
+
 <label for="ej1_c1">Numero 1</label>
 <input type="number" id="ej1_c1">
 
@@ -122,6 +123,19 @@
     let ej1_c3 = parseFloat(document.getElementById('ej1_c3').value);
 
 
+    if (ej1_c1 > ej1_c2 && ej1_c1 > ej1_c3) 
+
+    else
+
+     if (ej1_c2 > ej1_c1 && ej1_c2 > ej1_c3)
+
+     else
+
+     
+    
+
+
+
 
    }
 
@@ -145,7 +159,7 @@
 
 
     let ej3_c1 = document.getElementById('ej3_c1').value;
-    let ej3_c2 = parseFloat(document.getElementById('ej3_c2').value);
+    let ej3_c2 = document.getElementById('ej3_c2').value;
 
     const res_ej3 = ej3_c1 * ej3_c2;
     document.getElementById('ej2_resultado').value = res_ej3;
